# web_interface_open3d

./: .gitignore  README.md  app.py  views.py
data/: sensor_data.xyz
gazebo_world/: CMakeLists.txt  animation-test.world  topic.sh  vel.cc  vel.sh  vel_data.cc  velodyne.world  velodyne_2.world  velodyne_3.world  velodyne_4.world  velodyne_animation.world  velodyne_copy.world  velodyne_plugin copy.cc  velodyne_plugin.cc  velodyne_plugin_original.cc
gazebo_world/msgs/: CMakeLists.txt  echo_positions.proto
gazebo_world/sensor_data/: data.xml  data_example.yml  json_data.txt  sensor_data.xml  sensor_data.xyz  sensor_data_example.xml
gazebo_world/vehicle/: model.sdf
gazebo_world/velodyne/: model.config  model.sdf
gazebo_world/velodyne_hdl32/: model.sdf
gazebo_world/worlds/: cafe.world  cafe2.world  cafe3.world  cafe4.world  gas_station.world  schools.world  vel_vehicle.world  willow_garage.world
models/: ex.gltf  ex2.gltf  teste.xyz
static/: index.js  interface.js
templates/: index.html  interface.html
